--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <version>1.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-cucumber7-jvm</artifactId>
+            <version>2.29.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
